[package]
name = "snake"
version = "0.1.0"
authors = ["Vadim Yanko <yanko.vadim@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "snake"

[dependencies]
piston = "0.49.0"
piston2d-graphics = "0.34.0"
pistoncore-glutin_window = "0.63.0"
piston2d-opengl_graphics = "0.68.0"